links libraries added in the html

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CrudWebApp.styles.css" asp-append-version="true" />
+
+	
+	<link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
+
+	
+	<link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+
 </head>
 <body>
     <header>
@@ -42,9 +49,23 @@
             &copy; 2024 - CrudWebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    
+	
+	<script src="~/lib/sweetalert2/sweetalert2.all.min.js"></script>
+	
+
+	<script src="~/lib/font-awesome/js/all.min.js"></script>
+
+
+	<script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
