--- a/Views/Persona/Index.cshtml
+++ b/Views/Persona/Index.cshtml
@@ -33,7 +33,64 @@
                 </div>
             </div>
             <div class="table-responsive">   
-                <table id="dtPersonas">
+                <table class="table table-striped table-info table-hover" id="dtPersonas">
+                    <thead>
+                        <tr>
+                            <th>
+								@Html.DisplayNameFor(model => model.Id)
+                            </th>
+							<th><
+								@Html.DisplayNameFor(model => model.PrimerNombre)
+							</th>
+							<th>
+								@Html.DisplayNameFor(model => model.Apellido)
+							</th>
+							<th>
+								@Html.DisplayNameFor(model => model.Telefono)
+							
+							<th>
+								@Html.DisplayNameFor(model => model.Email)
+							</th>
+                            <th>
+                                    @Html.DisplayNameFor(model => model.Edad)
+                            </th>
+							<th>Options</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+						@foreach (var item in Model)
+						{
+							<tr>
+								<td>
+									@Html.DisplayFor(modelItem => item.Id)
+								</td>
+								<td>
+									@Html.DisplayFor(modelItem => item.PrimerNombre)
+								</td>
+								<td>
+									@Html.DisplayFor(modelItem => item.Apellido)
+								</td>
+								<td>
+									@Html.DisplayFor(modelItem => item.Telefono)
+								</td>
+								<td>
+									@Html.DisplayFor(modelItem => item.Email)
+								</td>
+								<td>
+									@Html.DisplayFor(modelItem => item.Edad)
+								</td>
+								<td>
+									<a asp-controller="Persona" asp-action="Editar" asp-route-id="@item.Id" class="btn btn-warning">
+										<i class="fas fa-edit"></i>
+									</a>
+									<a asp-controller="Persona" asp-action="Eliminar" asp-route-id="@item.Id" class="btn btn-danger">
+										<i class="fas fa-trash"></i>
+									</a>
+								</td>
+							</tr>
+						}
+                    </tbody>
 
                 </table>
             </div>
